[tool.poetry]
name = "pydynmap"
version = "0.1.0"
description = "Python Wrapper for Minecraft dynmap plugin"
authors = ["Maruo.S <raspi-maru2004@outlook.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
